[project]
name = "mechgaia-agentbeats"
version = "0.1.0"
description = "MechGaia AgentBeats Green/White Agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.8",
    "dotenv>=0.9.9",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
    "httpx>=0.27.0",
    "litellm>=1.56.1",
    "earthshaker>=0.2.1",
]

[project.scripts]
agentbeats = "main:app"
green-agent = "src.green_agent.main:app"
white-agent = "src.white_agent.main:app"
